--- a/gestures/res/xml/gesture_panel.xml
+++ b/gestures/res/xml/gesture_panel.xml
@@ -61,7 +61,7 @@
         android:key="extra_settings_key"
         android:title="@string/touchscreen_gesture_extras" >
 
-        <cyanogenmod.preference.CMSystemSettingSwitchPreference
+        <mokee.preference.MKSystemSettingSwitchPreference
             android:key="touchscreen_gesture_haptic_feedback"
             android:title="@string/touchscreen_gesture_haptic_feedback"
             android:summary="@string/touchscreen_gesture_haptic_feedback_summary"
